# jwt

./: package-lock.json  package.json
src/: App.css  App.tsx  index.tsx
src/API/: baseQuery.ts  cardApi.ts  userApi.ts
src/components/: List.tsx  NavBar.tsx  UserPage.tsx
src/components/Bill/: BillItem.tsx  Bills.tsx
src/components/Cards/: CardItem.tsx  CardItemPage.tsx  Cards.tsx  CreateCardForm.tsx
src/components/Cards/Transactions/: GetTransactionForm.tsx  TransactionForm.tsx
src/components/Modal/: Modal.tsx
src/components/authorization/: Authorization.tsx  Registration.tsx
src/store/: store.ts
src/types/: account.ts  auth.ts  cards.ts
test-backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
test-backend/main/: settings.py  settings_local.py  urls.py
test-backend/testapi/: apps.py  auth.py  models.py  permissions.py  serializers.py  urls.py  views.py
test-backend/testapi/migrations/: 0001_initial.py  0002_auto_20220209_0855.py  0003_auto_20220209_1123.py
